--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Imperia Consulting | Real Estate</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <div id="root"><!--ssr-outlet--></div>
+    <script type="module" src="/src/EntryClient.jsx"></script>
   </body>
 </html>
